# Dagster-eks

./: .gitignore  README.md
.github/workflows/: ci-app.yml  ci-terraform.yml  deploy-app.yml  deploy-infra.yml
dagster/: .dockerignore  Dockerfile  dagster.yaml  docker-compose.yml  prometheus-local.yml  pyproject.toml  setup.py  workspace.yaml
dagster/pipeline/: __init__.py  assets.py  jobs.py  resources.py  sensors.py
dagster/tests/: test_assets.py  test_jobs.py
helm/dagster/: values.yaml
helm/monitoring/: values.yaml
kubernetes/: namespaces.yaml  network-policies.yaml
kubernetes/monitoring/: grafana-dashboard-configmap.yaml  prometheus-rules.yaml
scripts/: bootstrap.sh
terraform/: imports.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/github-oidc/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
